# 2024 Android Open Source Project
# SPDX-License-Identifier: MIT
option(
  'gfxstream',
  type : 'boolean',
  value : false,
  description : 'Build gfxstream in rutabaga_gfx_ffi',
)

option(
  'virglrenderer',
  type : 'boolean',
  value : false,
  description : 'Build virglrenderer in rutabaga_gfx_ffi',
)
